<resources>
    <string name="app_name">Coral Map</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_carte">CarteActivity</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="sign_in">sign_in</string>
    <string name="password">password</string>
    <string name="prompt_email">prompt_email</string>
    <string name="register">register</string>
    <string name="confirm_password">confirm_password</string>
    <string name="email_registration">email_registration</string>
    <string name="collection_users">users</string>
    <string name="se_connecter">Se connecter</string>
    <string name="adresse_mail">Adresse mail</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="tu_n_as_pas_de_compte_inscrits_toi">Tu n\'as pas de compte ? Inscrits toi</string>
    <string name="connexion">Connexion</string>
    <string name="inscription">Inscription</string>
    <string name="confirmation_mot_de_passe">Confirmation mot de passe</string>
    <string name="s_inscrire">S\'inscrire</string>
</resources>