<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientbackground"
    android:orientation="vertical"
    android:gravity="center">



    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="180dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="171dp"
                android:layout_height="wrap_content"
                android:text="@string/connexion"
                android:layout_marginHorizontal="100dp"
                android:textSize="34sp"
                android:layout_gravity="top" />


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/adresse_mail"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColorHint="#bababa"
                android:padding="6dp"
                android:textSize="21sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="6dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/mot_de_passe"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColorHint="#bababa"
                android:textSize="21sp" />



            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/email_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="48dp"
                android:text="@string/se_connecter"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/relLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/link_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/tu_n_as_pas_de_compte_inscrits_toi"
                    android:textColor="@color/black"
                    android:textSize="16sp" />


            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:visibility="invisible" />

</LinearLayout>
