<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientbackground"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/relLayout1"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inscription"
                    android:textSize="34sp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:id="@+id/textEmailReg"/>


                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:textColorHint="#bababa"
                    android:textColor="#000000"
                    android:padding="6dp"
                    android:background="@drawable/edit_text_background"
                    android:inputType="textEmailAddress"
                    android:hint="@string/adresse_mail"
                    android:layout_below="@+id/textEmailReg"/>


                <EditText
                    android:id="@+id/input_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:layout_marginTop="80dp"
                    android:textColorHint="#bababa"
                    android:textColor="#000000"
                    android:background="@drawable/edit_text_background"
                    android:inputType="textEmailAddress"
                    android:hint="Pseudo"
                    android:layout_below="@+id/textEmailReg"/>


                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:textColor="#000000"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp"
                    android:textColorHint="#bababa"
                    android:padding="6dp"
                    android:inputType="textPassword"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/mot_de_passe"
                    android:layout_below="@+id/input_email"/>

                <EditText
                    android:id="@+id/input_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:inputType="textPassword"
                    android:textColor="#000000"
                    android:background="@drawable/edit_text_background"
                    android:padding="6dp"
                    android:textColorHint="#bababa"
                    android:hint="@string/confirmation_mot_de_passe"
                    android:layout_below="@+id/input_password"/>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:layout_below="@+id/input_confirm_password"
                    android:text="@string/s_inscrire"
                    android:layout_marginHorizontal="50dp"
                    android:background="@drawable/button_background"/>


            </RelativeLayout>



        </RelativeLayout>
    </ScrollView>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:visibility="invisible"/>

</RelativeLayout>